gitops/manifests/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: step-ca
spec:
  ingressClassName: traefik
  rules:
    - host: uptime-kuma.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 8080
  tls:
    - hosts: [uptime-kuma.home.lab]
      secretName: uptime-kuma-tls
